--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ flask-cors==4.0.0
 google-genai==0.3.0
 python-dotenv==1.0.0
 PyPDF2==3.0.1
-PyMuPDF==1.23.14
-werkzeug==2.3.7
+PyMuPDF==1.22.5
+gunicorn
